# sound_wm_turtlebot

./: .gitignore  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
CADData/: new_plate.stp
WorkSpace/: doa_sim.ipynb  env_sim.ipynb  env_test.ipynb  gym_env.py  lidar_sim.ipynb  make_image.ipynb  mic_array_test.ipynb  mic_array_test.py  plot_sound.ipynb  readme.md  test_train.ipynb
WorkSpace/envs/: gym_env.py
WorkSpace/graph_csv/: 2.csv  5.csv  6.csv  7.csv
WorkSpace/train/: train_dreamer.py
WorkSpace/train/drqv2/: replay_buffer.py
cad_data/: new_plate.stl
documents/: cuda_setup.md  ros2_setup.md  ros_use.md
dreamerv3/: example.py
dreamerv3/dreamerv3/: agent.py
dreamerv3/dreamerv3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
launch/: main.launch.py
sound_turtle/: package.xml  setup.cfg  setup.py
sound_turtle/launch/: main.launch.py  turtle.launch.py
sound_turtle/sound_turtle/: control_node.py  doa_node.py  dreamer_util.py  drq_util.py  dummy_control_node.py  readme.md  train_dreamer.py  train_drq.py  train_sac.py  train_sac2.py  wrap_node.py
sound_turtle_msgs/: CMakeLists.txt  package.xml
sound_turtle_msgs/srv/: GetAction.srv
sound_turtlebot/: control_node.py  readme.md  wrap_node.py
train/: .gitignore  example.py  readme.md  train_dreamer.py  train_drq.py
train/drqv2/: drqv2.py  my_simulator.py  my_train.py  replay_buffer.py
train/my_envs/: env_test.ipynb  gym_env.py  my_env.py
work_space/: doa_sim.ipynb  dreamer_test.ipynb  test.ipynb
work_space/graph_csv/: 1.csv  3.csv  4.csv
(+20 files in other folders)
